--- a/clover/src/app/components/car/car.component.css
+++ b/clover/src/app/components/car/car.component.css
@@ -143,7 +143,7 @@ section{
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
           padding: 140px 0;
-  margin-top: -18%;
+  margin-top: -17%;
 }
 .card{
   position: relative;
@@ -163,32 +163,15 @@ transition: .5s;
           transform: scale(1.1);
 }
 .col-sm-4:nth-child(1) .card ,
-.col-sm-4:nth-child(1) .card .title .fa{
-  background: linear-gradient(-45deg,#f403d1,#64b5f6);
-
-}
+.col-sm-4:nth-child(1) .card .title .fa,
 .col-sm-4:nth-child(2) .card,
-.col-sm-4:nth-child(2) .card .title .fa{
-  background: linear-gradient(-45deg,#ffec61,#f321d7);
-
-}
+.col-sm-4:nth-child(2) .card .title .fa,
 .col-sm-4:nth-child(3) .card,
-.col-sm-4:nth-child(3) .card .title .fa{
+.col-sm-4:nth-child(3) .card .title .fa
+{
   background: linear-gradient(-45deg,#24ff72,#9a4eff);
+}
 
-}
-.card::before{
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 40%;
-  background: rgba(255, 255, 255, .1);
-z-index: 1;
--webkit-transform: skewY(-5deg) scale(1.5);
-        transform: skewY(-5deg) scale(1.5);
-}
 .title .fa{
   color:#fff;
   font-size: 60px;
