--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -1,222 +1,353 @@
 body, html {
-    background-attachment: fixed;
-        background-size: cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-  }
+   background-attachment: fixed;
+       background-size: cover;
+       display: flex;
+       align-items: center;
+       justify-content: center;
+       height: 100vh;
+       margin: 0;
+ }
 
-  .bg {
-    background-image: url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
-    height: 100%;
-    width: 100%;
-  
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+ .bg {
+   background-image: url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
+   height: 100%;
+   width: 100%;
+ 
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+ }
 
-  .conteiner{
-    margin-left: 32%;
-    margin-right: 7%;
-    margin-top: 150px;
-    height: 80%;
-    padding: 20px;
-    background: #fff;
-    background:rgba(137, 153, 158, 0.8);
-    padding: 25px;
-    border-radius: 10px;
+
+ .conteiner{
+   margin-left: 32%;
+   margin-right: 7%;
+   margin-top: -30%;
+   height: 80%;
+   padding: 20px;
+
+
+   padding: 25px;
+   border-radius: 10px;
+   background:rgba(137, 153, 158, 0.8);
 }
 
+.about{
+   margin-left: 6%;
+   margin-top: 2%;
+   width: 87%;
+}
+
+
+
+
+
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
+article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
+.clear{clear:both;}
+img{max-width:100%;}
+
+body {
+background-size: cover;
+font-family: 'Open Sans', sans-serif;
+background-attachment: fixed;
+background-position: center;
+}
+
+.main-agileinfo{
+margin-left:6%;
+margin-top: 4%;
+width: 300px;
+}
+
+.resp-tabs-list {
+    width: 100%;
+    height: 100%;
+    padding: 17px 20px;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    border: none;
+    background-color: #FA396F;
+    border-radius: 10px;
+    border-bottom-left-radius: 0%;
+    border-bottom-right-radius: 0%;
+}
+
+form{
+background:rgba(137, 153, 158, 0.8);
+padding: 25px;
+border-radius: 10px;
+border-top-left-radius: 0%;
+border-top-right-radius: 0%;
+}
+
+
+h3 {
+font-size: 16px;
+color:#fff;
+margin-bottom: 7px;
+}
+
+.from,.to,.date,.depart,.return{
+    float:left;
+    
+}
+
+.from,.to,.date{
+margin-bottom:20px;
+
+}
+
+input[type="text"]{
+padding:10px;
+width:93%;
+float:left;
+}
+
+input#datepicker,input#datepicker1,input#datepicker2,input#datepicker3 {
+width: 85%;
+margin-bottom:10px;
+}
+
+
+
+.form-submit {
+    width: 100%;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -o-border-radius: 5px;
+    -ms-border-radius: 5px;
+    padding: 17px 20px;
+    box-sizing: border-box;
+    font-size: 14px;
+    font-weight: 700;
+    color: #fff;
+    text-transform: uppercase;
+    border: none;
+    background-color: #FA396F;
+}
+
+
+
+
+
+
 .table{
-    display: block;
+
+   background: rgba(0, 0, 0, 0.3);
 }
 
 .param {
-    margin-bottom: 7px;
-    line-height: 1.4;
+   margin-bottom: 7px;
+   line-height: 1.4;
 }
 .param-inline dt {
-    display: inline-block;
+   display: inline-block;
 }
 .param dt {
-    margin-top: 0;
-    margin-right: 7px;
-    font-weight: 600;
+   margin: 0;
+   margin-right: 7px;
+   font-weight: 600;
 }
 .param-inline dd {
-    vertical-align: baseline;
-    display: inline-block;
+   vertical-align: baseline;
+   display: inline-block;
 }
 
 .param dd {
-    margin: 0;
-    vertical-align: baseline;
+   margin: 0;
+   vertical-align: baseline;
+   
 } 
 
 .shopping-cart-wrap .price {
-    color: #007bff;
-    font-size: 18px;
-    font-weight: bold;
-    margin-right: 5px;
-    display: block;
+   color: #007bff;
+   font-size: 18px;
+   font-weight: bold;
+   margin-right: 5px;
+   display: block;
+   
 }
 var {
-    font-style: normal;
+   font-style: normal;
+   
 }
 
 .media img {
-    margin-right: 1rem;
+   margin-right: 1rem;
+   
 }
 .img-sm {
-    width: 90px;
-    max-height: 75px;
-    object-fit: cover;
-}
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-body {
-   background-color: lighten(#398B93, 30%);
-   box-sizing: border-box; 
+   width: 90px;
+   max-height: 75px;
+   object-fit: cover;
+   
 }
 
-.header {
-   background-color: darken(#398B93, 5%);
+
+
+
+.square, .btn {
+   border-radius: 0px!important;
+   
+}
+
+/* -- color classes -- */
+.coralbg {
+   background-color: #FA396F;
+   
+} 
+
+.coral {
+   color: #FA396f;
+   
+}
+
+.turqbg {
+   background-color: #46D8D2;
+   
+}
+
+.turq {
+   color: #46D8D2;
+   
+}
+
+.white {
+   color: #fff!important;
+   
+}
+
+/* -- The "User's Menu Container" specific elements. Custom container for the snippet -- */
+div.user-menu-about {
+ z-index: 10;
+ background:rgba(137, 153, 158, 0.8);
+ margin-top: 20px;
+ background-clip: padding-box;
+ opacity: 0.97;
+ filter: alpha(opacity=97);
+ -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+ box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+ 
+}
+
+div.user-menu-about .btn-lg {
+   padding: 0px 12px;
+}
+
+div.user-menu-about h4 {
+   font-weight: 300;
+   color: #8b8b8b;
+}
+
+div.user-menu-about a, div.user-menu-about .btn  {
+   transition: 1s ease;
+}
+
+div.user-menu-about .thumbnail {
+  width:100%;
+  min-height:200px;
+  border: 0px!important;
+  padding: 0px;
+  border-radius: 0;
+  border: 0px!important;
+}
+
+/* -- Vertical Button Group -- */
+div.user-menu-about .btn-group-vertical {
+   display: block;
+   
+}
+
+div.user-menu-about .btn-group-vertical>a {
+   padding: 20px 25px;
+   background-color: #46D8D2;
    color: white;
-   font-size: 1.5em;
-   padding: 1rem;
-   text-align: center;
-   text-transform: uppercase;
+   border-color: #fff;
+   
 }
 
-img {
-   border-radius: 50%;
-   height: 60px;
-   width: 60px;
+div.btn-group-vertical>a:hover {
+   color: white;
+   border-color: white;
+   
 }
 
-.table-users {
-   border: 1px solid darken(#398B93, 5%);
-   border-radius: 10px;
-   box-shadow: 3px 3px 0 rgba(0,0,0,0.1);
-   max-width: calc(100% - 2em);
-   margin: 1em auto;
-   overflow: hidden;
-   width: 800px;
+div.btn-group-vertical>a.active {
+   background: #FA396F;
+   box-shadow: none;
+   color: white;
+   
+}
+/* -- Individual button styles of vertical btn group -- */
+div.user-menu-btns {
+   padding-right: 0;
+   padding-left: 0;
+   padding-bottom: 0;
+   
 }
 
-table {
-   width: 100%;
+div.user-menu-btns div.btn-group-vertical>a.active:after{
+ content: '';
+ position: absolute;
+ left: 100%;
+ top: 50%;
+ margin-top: -13px;
+ border-left: 0;
+ border-bottom: 13px solid transparent;
+ border-top: 13px solid transparent;
+ border-left: 10px solid #46D8D2;
+ 
 }
 
-   
-   td {
-      text-align: center;
-      vertical-align: middle;
-      color: darken(#398B93, 10%);
-      padding: 10px;
-      
-   }
-   
-   th { 
-      background-color: lighten(#398B93, 50%);
-      font-weight: 300;
-      color: darken(#398B93, 10%);
-      padding: 10px; 
-   }
-   
-  
 
 
-@media screen and (max-width: 700px) {   
-   table, tr, td { display: block; }
-   
-   td {
-      
-         position: absolute;
-         top: 50%;
-         transform: translateY(-50%);
-         width: 100px;
-      }
-
-    }
-   
-   tr {
-      padding: 10px 0;
-      position: relative;
-      
-   }
-
-
-@media screen and (max-width: 500px) {
-   .header {
-      background-color: transparent;
-      color: lighten(#398B93, 60%);
-      font-size: 2em;
-      font-weight: 700;
-      padding: 0;
-      text-shadow: 2px 2px 0 rgba(0,0,0,0.1);
-   }
-   
-   img {
-      border: 3px solid;
-      border-color: lighten(#398B93, 50%);
-      height: 100px;
-      margin: 0.5rem 0;
-      width: 100px;
-   }
-   
-   td {
-       
-         background-color: lighten(#398B93, 45%); 
-         border-bottom: 1px solid lighten(#398B93, 30%);
-         border-radius: 10px 10px 0 0;
-         position: relative;   
-         top: 0;
-         transform: translateY(0);
-         width: 100%;
-      }
-      
-     
-   
-   tr {
-      background-color: white !important;
-      border: 1px solid lighten(#398B93, 20%);
-      border-radius: 10px;
-      box-shadow: 2px 2px 0 rgba(0,0,0,0.1);
-      margin: 0.5rem 0;
-      padding: 0;
-   }
-   
-   .table-users { 
-      border: none; 
-      box-shadow: none;
-      overflow: visible;
-   }
+.user-pad {
+   padding: 20px 25px;
 }
+
+.no-pad {
+   padding-right: 0;
+   padding-left: 0;
+   padding-bottom: 0;
+}
+
+
+
+
+
+
+.btn1 {
+  width: 50%;
+  margin-bottom: 4%;
+  border: none;
+  float: left;
+  text-align: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  outline: none;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  font-weight: 700;
+  font-size: 15px;
+  background: #FA396F;
+  padding: 10px 10px;
+  box-shadow: 0 5px 15px #ce5386;
+  border-radius: 10px;
+}
+
+.link {
+  font-size: 20px;
+  margin-top: 30px;
+}
+
+.link a {
+  background: #78c7d2;
+  font-size: 25px; 
+}
+
