--- a/clover/src/app/components/car/car.component.css
+++ b/clover/src/app/components/car/car.component.css
@@ -17,6 +17,15 @@ body, html {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+.whiteBg{
+  background: rgba(255, 255, 255, 0.6);
+  height: 100%;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: -4%;
+}
   
 
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
@@ -123,115 +132,91 @@ margin-bottom:10px;
     margin-top: -30%;
     height: 80%;
     padding: 20px;
-    background: #fff;
-    background:rgba(137, 153, 158, 0.8);
     padding: 25px;
     border-radius: 10px;
     position: relative;
+    margin-top: -38%;
+    margin-right: -20%;
 }
 
 
-  @import url('https://fonts.googleapis.com/css?family=Roboto:300');
-body{
-  margin: 0;
-  padding: 0;
- font-family: 'Roboto', sans-serif !important;
-}
-section{
-  width: 100%;
-  height: 100vh;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-          padding: 140px 0;
-  margin-top: -17%;
-}
-.card{
+
+.services .icon-box {
+  padding: 30px;
   position: relative;
-  max-width: 250px;
-  height: auto;
-  background: linear-gradient(-45deg,#fe0847,#feae3f);
-  border-radius: 15px;
-  margin: 0 auto;
-  padding: 40px 20px;
-  -webkit-box-shadow: 0 10px 15px rgba(0,0,0,.1) ;
-          box-shadow: 0 10px 15px rgba(0,0,0,.1) ;
--webkit-transition: .5s;
-transition: .5s;
-}
-.card:hover{
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-}
-.col-sm-4:nth-child(1) .card ,
-.col-sm-4:nth-child(1) .card .title .fa,
-.col-sm-4:nth-child(2) .card,
-.col-sm-4:nth-child(2) .card .title .fa,
-.col-sm-4:nth-child(3) .card,
-.col-sm-4:nth-child(3) .card .title .fa
-{
-  background: linear-gradient(-45deg,#24ff72,#9a4eff);
+  overflow: hidden;
+  background: #fff;
+  box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
+  transition: all 0.3s ease-in-out;
+  border-radius: 8px;
+  z-index: 1;
+  margin-right: 5%;
 }
 
-.title .fa{
-  color:#fff;
-  font-size: 60px;
+.services .icon-box::before {
+  content: '';
+  position: absolute;
+  background: #e1f0fa;
+  right: -60px;
+  top: -40px;
   width: 100px;
   height: 100px;
-  border-radius:  50%;
-  text-align: center;
-  line-height: 100px;
-  -webkit-box-shadow: 0 10px 10px rgba(0,0,0,.1) ;
-          box-shadow: 0 10px 10px rgba(0,0,0,.1) ;
-
+  border-radius: 50px;
+  transition: all 0.3s;
+  z-index: -1;
 }
-.title h2 {
-  position: relative;
-  margin: 20px  0 0;
-  padding: 0;
+
+.services .icon-box:hover::before {
+  background: #3498db;
+  right: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0px;
+}
+
+.services .icon {
+  margin: 0 auto 20px auto;
+  padding-top: 10px;
+  display: inline-block;
+  text-align: center;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  background: #3498db;
+  transition: all 0.3s ease-in-out;
+}
+
+.services .icon i {
+  font-size: 36px;
+  line-height: 1;
   color: #fff;
-  font-size: 28px;
- z-index: 2;
 }
-.price,.option{
-  position: relative;
-  z-index: 2;
-}
-.price h4 {
-margin: 0;
-padding: 20px 0 ;
-color: #fff;
-font-size: 60px;
-}
-.option ul {
-  margin: 0;
-  padding: 0;
 
+.services .title {
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 18px;
 }
-.option ul li {
-margin: 0 0 10px;
-padding: 0;
-list-style: none;
-color: #fff;
-font-size: 16px;
+
+.services .title a {
+  color: #111;
 }
-.card a {
-  position: relative;
-  z-index: 2;
+
+.services .description {
+  font-size: 15px;
+  line-height: 28px;
+  margin-bottom: 0;
+}
+
+.services .icon-box:hover .title a, .services .icon-box:hover .description {
+  color: #fff;
+}
+
+.services .icon-box:hover .icon {
   background: #fff;
-  color : black;
-  width: 150px;
-  height: 40px;
-  line-height: 40px;
-  border-radius: 40px;
-  display: block;
-  text-align: center;
-  margin: 20px auto 0 ;
-  font-size: 16px;
-  cursor: pointer;
-  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
-          box-shadow: 0 5px 10px rgba(0, 0, 0, .1);
-
 }
-.card a:hover{
-    text-decoration: none;
+
+.services .icon-box:hover .icon i {
+  color: #3498db;
 }
