--- a/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
+++ b/clover/src/app/components/car/rent-a-car/rent-a-car.component.css
@@ -2,6 +2,8 @@ body {
    font-family: "Open Sans", sans-serif;
    color: #444444;
  }
+
+
  
  a {
    color: #3498db;
@@ -102,12 +104,13 @@ body {
    margin: 0;
    padding: 0;
    list-style: none;
+   margin-top: 14%;
+   margin-left: -10%;
  }
  
  .nav-menu > ul > li {
    position: relative;
    white-space: nowrap;
-   float: left;
  }
  
  .nav-menu a {
@@ -226,8 +229,8 @@ body {
  #hero {
    width: 100%;
    height: 70vh;
-   margin-top: 70px;
-   margin-bottom: 10%;
+   margin-top: 5%;
+   margin-bottom: 42%;
  }
  
  #hero h1 {
@@ -335,6 +338,7 @@ body {
 
  .about{
    margin-bottom: 26%;
+   margin-bottom: 32%;
  }
 
 
@@ -398,100 +402,129 @@ body {
 
 
 
+
+
+
+
+
+
 .services{
    margin-bottom: 15%;
+   margin-bottom: 25%;
 }
 
 
- .services .icon-box {
-   padding: 30px;
-   position: relative;
-   overflow: hidden;
-   background: #fff;
-   box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
-   transition: all 0.3s ease-in-out;
-   border-radius: 8px;
-   z-index: 1;
- }
+.section-title{
+  margin-top: -35%;
+}
+
+
+.main-agileinfo{
+  margin-left:0%;
+  width: 300px;
+  }
+  
+  .resp-tabs-list {
+      width: 100%;
+      height: 100%;
+      padding: 17px 20px;
+      box-sizing: border-box;
+      font-size: 14px;
+      font-weight: 700;
+      color: #fff;
+      text-transform: uppercase;
+      border: none;
+      background-image: -moz-linear-gradient(to left, #74ebd5, #9face6);
+      background-image: -ms-linear-gradient(to left, #74ebd5, #9face6);
+      background-image: -o-linear-gradient(to left, #74ebd5, #9face6);
+      background-image: -webkit-linear-gradient(to left, #74ebd5, #9face6);
+      background-image: linear-gradient(to left, #74ebd5, #9face6); 
+      border-radius: 10px;
+      border-bottom-left-radius: 0%;
+      border-bottom-right-radius: 0%;
+  }
+
+  form{
+    background:rgba(208, 215, 218, 0.8);
+    padding: 25px;
+    border-radius: 10px;
+    border-top-left-radius: 0%;
+    border-top-right-radius: 0%;
+    }
+
+    h3 {
+      font-size: 16px;
+      color:#fff;
+      margin-bottom: 7px;
+      }
+      
+      .from,.to,.date,.depart,.return{
+          float:left;
+          
+      }
+      
+      .from,.to,.date{
+      margin-bottom:20px;
+      
+      }
+      
+      input[type="text"]{
+      padding:10px;
+      width:93%;
+      float:left;
+      }
+      
+      input#datepicker,input#datepicker1,input#datepicker2,input#datepicker3 {
+      width: 85%;
+      margin-bottom:10px;
+      }
+      
+      
+      
+      .form-submit {
+          width: 100%;
+          border-radius: 5px;
+          -moz-border-radius: 5px;
+          -webkit-border-radius: 5px;
+          -o-border-radius: 5px;
+          -ms-border-radius: 5px;
+          padding: 17px 20px;
+          box-sizing: border-box;
+          font-size: 14px;
+          font-weight: 700;
+          color: #fff;
+          text-transform: uppercase;
+          border: none;
+          background-image: -moz-linear-gradient(to left, #74ebd5, #9face6);
+          background-image: -ms-linear-gradient(to left, #74ebd5, #9face6);
+          background-image: -o-linear-gradient(to left, #74ebd5, #9face6);
+          background-image: -webkit-linear-gradient(to left, #74ebd5, #9face6);
+          background-image: linear-gradient(to left, #74ebd5, #9face6); 
+      }
  
- .services .icon-box::before {
-   content: '';
-   position: absolute;
-   background: #e1f0fa;
-   right: -60px;
-   top: -40px;
-   width: 100px;
-   height: 100px;
-   border-radius: 50px;
-   transition: all 0.3s;
-   z-index: -1;
- }
- 
- .services .icon-box:hover::before {
-   background: #3498db;
-   right: 0;
-   top: 0;
-   width: 100%;
-   height: 100%;
-   border-radius: 0px;
- }
- 
- .services .icon {
-   margin: 0 auto 20px auto;
-   padding-top: 10px;
-   display: inline-block;
-   text-align: center;
-   border-radius: 50%;
-   width: 60px;
-   height: 60px;
-   background: #3498db;
-   transition: all 0.3s ease-in-out;
- }
- 
- .services .icon i {
-   font-size: 36px;
-   line-height: 1;
-   color: #fff;
- }
- 
- .services .title {
-   font-weight: 700;
-   margin-bottom: 15px;
-   font-size: 18px;
- }
- 
- .services .title a {
-   color: #111;
- }
- 
- .services .description {
-   font-size: 15px;
-   line-height: 28px;
-   margin-bottom: 0;
- }
- 
- .services .icon-box:hover .title a, .services .icon-box:hover .description {
-   color: #fff;
- }
- 
- .services .icon-box:hover .icon {
-   background: #fff;
- }
- 
- .services .icon-box:hover .icon i {
-   color: #3498db;
- }
+
+.table{
+  width: 80%;
+  margin-left: 20%;
+}
 
 
 
+.imageCar{
+  background-image: url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
+    height: 100%;
+    width: 100%;
+  
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 
-
-
-
-
-
-
+.contact{
+  margin-top: 80%;
+  margin-bottom: 20%;
+}
 
 
  .contact .contact-about h3 {
