--- a/clover/src/app/components/flights/flights.component.css
+++ b/clover/src/app/components/flights/flights.component.css
@@ -10,7 +10,7 @@ body, html {
     background-image: url('https://mdbootstrap.com/img/Photos/Others/images/91.jpg');
     height: 100%;
     width: 100%;
-  
+    position: relative;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -23,8 +23,9 @@ body, html {
 .section .section-center {
 	position: absolute;
 	top: 30%;
-	left: 0;
-	right: 36%;
+	left: 10px  ;
+  right: 36%;
+  width: 600px;
 	-webkit-transform: translateY(-50%);
 	transform: translateY(-50%);
 }
@@ -178,6 +179,135 @@ body, html {
     padding: 25px;
     border-radius: 10px;
 }
+.conteiner2{
+  position: absolute;
+right: 15px;
+top:85px;
+  height: 41%;
+  width: 60%;
+  padding: 20px;
+  background: #fff;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  border-radius: 10px;
+}
+.conteiner3{
+  position: absolute;
+right: 15px;
+top:500px;
+  height: 41%;
+  width: 60%;
+  padding: 20px;
+  background: #fff;
+  background: rgba(0, 0, 0, 0.3);
+  padding: 25px;
+  border-radius: 10px;
+}
+.main{
+  background: chocolate;
+}
+
+
+.div1{
+  background-color: rgba(255, 255, 255, 0.808);
+  width: 1000px;
+  height: 145px;
+  border-radius: 10px;
+  position: relative;
+
+  
+}
+.div2{
+  position: absolute;
+  left: 14px;
+  top: 14px;
+}
+.div3From{
+  font-family: "Lucida Console";
+  font-size: 150%;
+  position: absolute;
+  left: 14px;
+  top: 54px;
+}
+div.image {
+  position: absolute;
+  width: 530px;
+  height: 100px;
+  left: 250px;
+  top: 12px;
+  content:url(../flights/avio.png);
+ 
+}
+.div4{
+  position: absolute;
+  right: 14px;
+  top: 14px;
+}
+.div5To{
+  font-family: "Lucida Console";
+  font-size: 150%;
+  position: absolute;
+  right: 34px;
+  top: 54px;
+}
+.divName{
+  font-family: "Impact";
+  font-size: 150%;
+  position: absolute;
+  left: 480px;
+  top: 14px;
+  
+}
+.btn{
+  position: absolute;
+  right: 34px;
+  bottom: 3px;
+}
+.myButton {
+box-shadow: 0px 1px 0px 0px #f0f7fa;
+background:linear-gradient(to bottom, #33bdef 5%, #019ad2 100%);
+background-color:#33bdef;
+border-radius:11px;
+border:1px solid #057fd0;
+display:inline-block;
+cursor:pointer;
+color:#ffffff;
+font-family:Arial;
+font-size:15px;
+font-weight:bold;
+padding:9px 24px;
+text-decoration:none;
+text-shadow:0px -1px 0px #5b6178;
+}
+.myButton:hover {
+background:linear-gradient(to bottom, #019ad2 5%, #33bdef 100%);
+background-color:#019ad2b6;
+}
+.myButton:active {
+position:relative;
+top:1px;
+}
+
+#style-22{
+  overflow: auto;
+   
+}
+#style-2::-webkit-scrollbar-track{
+border-radius: 12px;
+background-color: transparent;
+
+}
+#style-2::-webkit-scrollbar{
+  width: 12px;
+background-color: transparent;
+
+}
+#style-2::-webkit-scrollbar-thumb{
+  border-radius: 10px;
+  background-color: #673946;
+}
+
+
 .booking-form .submit-btn {
 	color: #fff;
 	background-color: #f23e3e;
